Add equipment section

--- a/html/about.html
+++ b/html/about.html
@@ -35,34 +35,39 @@
           <div class="flex-item title-box">
             <h1 class="page-title">О компании</h1>
           </div>
-          <div class="flex-item discription-box">
+          <div class="flex-item description-box">
             <p><span lang="en">Promomix – </span>одна из крупнейших компаний <br> на рекламном рынке Подмосковья.</p>
           </div>
         </div>
-        <img src="../images/about/our-team.jpg" width="1400" height="675" alt="">
       </div>
       <div class="benefits-about section gray-section">
+        <img src="../images/about/our-team.jpg" width="1400" height="675" alt="">
         <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="list grid-list">
             <li class="benefits-item grid-item">
               <span class="accent benefits-number">18+</span>
-              <p>лет опыта на рекламном рынке</p>
+              <div class="container-p">
+                <p>лет опыта на рекламном рынке</p>
+              </div>
             </li>
             <li class="benefits-item grid-item">
               <span class="accent benefits-number">250+</span>
-              <p>реализованных
-                проектов</p>
+              <div class="container-p">
+                <p>реализованных проектов</p>
+              </div>
             </li>
             <li class="benefits-item grid-item">
               <span class="accent benefits-number">37</span>
-              <p>квалифицированных
-                сотрудников</p>
+              <div class="container-p">
+                <p>квалифицированных сотрудников</p>
+              </div>
             </li>
             <li class="benefits-item grid-item">
               <span class="accent benefits-number">14+</span>
-              <p>профессионального
-                оборудования</p>
+              <div class="container-p">
+                <p>профессионального оборудования</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -185,7 +190,7 @@
         </ul>
       </div>
     </section>
-    <section class="section history">
+    <section class="section history gray-section">
       <div class="container">
         <div class="flex-list">
           <div class="flex-item">
@@ -194,26 +199,46 @@
           </div>
           <ul class="list flex-item">
             <li class="history-item">
-              <span class="accent history-number">2011</span>
+              <span class="accent history-number">
+                <span class="dot dot-1"></span>
+                <span class="dot dot-2"></span>
+                <span class="dot dot-3"></span>
+                 2011
+              </span>
               <p>Запустили цеха по производству рекламных материалов для обеспечения потребностей наших клиентов в полном цикле
                 рекламных
                 услуг. Росли и развивались, постоянно пополняя ассортимент рекламной продукции.</p>
             </li>
             <li class="history-item">
-              <span class="accent history-number">2015</span>
+              <span class="accent history-number">
+                <span class="dot dot-1"></span>
+                <span class="dot dot-2"></span>
+                <span class="dot dot-3"></span>
+                2015
+              </span>
               <p>Провели модернизацию наших цехов. Закупили самые современные станки и принтеры. Благодаря высокому качеству
                 печати
                 привлекли множество новых клиентов и стали востребованной компанией на рекламном рынке.</p>
             </li>
             <li class="history-item">
-              <span class="accent history-number">2017</span>
+              <span class="accent history-number">
+                <span class="dot dot-1"></span>
+                <span class="dot dot-2"></span>
+                <span class="dot dot-3"></span>
+                  2017
+              </span>
               <p>Приобрели дополнительное оборудование, что позволило значительно расширить ассортимент изготавливаемой продукции.
                 Мощный
                 рост направления нашей деятельности привел к разделению наружной
                 рекламы и производства.</p>
             </li>
             <li class="history-item">
-              <span class="accent history-number">2019</span>
+              <span class="accent history-number">
+                <span class="dot dot-1"></span>
+                <span class="dot dot-2"></span>
+                <span class="dot dot-3"></span>
+                  2019
+              </span>
               <p>На сегодняшний день компания Promomix входит в число наиболее энергично развивающихся рекламно-производственных
                 компаний
                 Подмосковья. В наших цехах работают станки для производства практически всех видов рекламной продукции.</p>
@@ -224,10 +249,37 @@
         <img src="../images/about/about-history.jpg" alt="">
       </div>
     </section>
-    <section class="section">
+    <section class="equipment section">
       <div class="container">
         <h2 class="section-title">Оборудование</h2>
-        <img src="../images/about/milling-machine.jpg" alt="">
+          <ol class="list">
+            <li class="list-item">
+              <div class="equipment-label-manufacturer flex-list">
+                <div class="equipment-label flex-item">
+                  <span>Фрезерный станок</span>
+                </div>
+                <div class="equipment-manufacturer flex-item">
+                  <span>Shtalmark</span>
+                </div>
+              </div>
+              <div class="flex-list">
+                <div class="equimpent-img flex-item">
+                  <img src="../images/about/milling-machine.jpg" alt="">
+                </div>
+                <div class="equipment-model-description flex-item">
+                  <p class="equipment-model">Shtalmark M3-2040</p>
+                  <p class="equipment-description">Это надежный фрезер-раскойщик, в первую очередь, востребованный
+                    в рекламной отрасли. Станок способен выполнять любые задачи: резку, точную гравировку, 3D-обработку. Shtalmark
+                    M3-2040 - станок больших возможностей. Он может обрабатывать не только дерево, пластик, но
+                    и искусственный камень и цветные металлы.</p>
+                </div>
+             </div>
+            </li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
+            <li class="list-item"></li>
+          </ol>
       </div>
     </section>
     
@@ -349,5 +401,10 @@
       </div>
     </div>
   </footer>
+  <span class="dot dot-1">
+    <span class="dot dot-2">
+      <span class="dot dot-3"></span>
+    </span>
+  </span>
 </body>
 </html>
