--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <h3>Кафе Starbucks Coffee</h3>
               </div>
             </a>
-            <p class="upper">Вывеска объемная</p>
+            <p class="upper works-label">Вывеска объемная</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -209,7 +209,7 @@
                 <h3>Bio бутик Flora</h3>
               </div>
             </a>
-            <p class="upper">Наружная реклама</p>
+            <p class="upper works-label">Наружная реклама</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -218,7 +218,7 @@
                 <h3>Сеть ресторанов Emosi</h3>
               </div>
             </a>
-            <p class="upper">Вывеска объемная</p>
+            <p class="upper works-label">Вывеска объемная</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -227,7 +227,7 @@
                 <h3>Бизнес центр Sierra</h3>
               </div>
             </a>
-            <p class="upper">Фирменный стиль</p>
+            <p class="upper works-label">Фирменный стиль</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -236,7 +236,7 @@
                 <h3>Релакс студия Flora</h3>
               </div>
             </a>
-            <p class="upper">Фирменный стиль</p>
+            <p class="upper works-label">Фирменный стиль</p>
           </li>
           <li class="item">
             <a class="link" href="">
@@ -245,7 +245,7 @@
                 <h3>Магазин Levi's</h3>
               </div>
             </a>
-            <p class="upper">Входная группа и вывеска</p>
+            <p class="upper works-label">Входная группа и вывеска</p>
           </li>
         </ul>
         <button class="button" type="button">Все работы</button>
