--- a/html/about.html
+++ b/html/about.html
@@ -512,7 +512,10 @@
             <input type="text" class="form__input-text" placeholder="Имя">
             <input type="tel" class="form__input-tel" placeholder="Телефон">
             <input type="text" class="form__input-comment" placeholder="Комментарий к заявке">
-            <input type="file" class="form__input-file" value="Прикрепить файл">
+            <input type="file" class="form__input-file" id="file">
+            <label class="form__label-input-file" for="file">Прикрепить файл</label>
+            <button type="submit" class="button upper">Отправить</button>
+            <p class="form__policy">Нажимая «Отправить» вы даёте согласие на обработку персональных данных</p>
           </form>
         </div>
       </div>
