--- a/html/about.html
+++ b/html/about.html
@@ -522,7 +522,7 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer-dark">
+    <div class="footer-dark gray-section">
       <div class="container">
         <div class="top-footer">
           <div class="flex-item">
@@ -535,20 +535,25 @@
             <div class="flex-list">
               <nav class="flex-item">
                 <ul class="list main-nav">
-                  <li class="item"><a class="link" href="./html/about.html">О компании</a></li>
-                  <li class="item"><a class="link" href="./html/features.html">Услуги</a></li>
-                  <li class="item"><a class="link" href="./html/works.html">Наши работы</a></li>
-                  <li class="item"><a class="link" href="./html/services.html">Сервис</a></li>
-                  <li class="item"><a class="link" href="./html/complex.html">Комплексные решения</a></li>
-                  <li class="item"><a class="link" href="./html/posts.html">Статьи и новости</a></li>
-                  <li class="item"><a class="link" href="./html/contacts.html">Контакты</a></li>
+                  <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
+                  <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
+                  <li class="item"><a class="link" href="../html/works.html">Наши работы</a></li>
+                  <li class="item"><a class="link" href="../html/services.html">Сервис</a></li>
+                  <li class="item"><a class="link" href="../html/complex.html">Комплексные решения</a></li>
+                  <li class="item"><a class="link" href="../html/posts.html">Статьи и новости</a></li>
+                  <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
                 </ul>
               </nav>
               <div class="flex-item">
                 <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
                 <form class="footer-form">
                   <input class="placeholder" type="email" placeholder="Ваш e-mail">
-                  <button type="submit">&#8594;</button>
+                  <button type="submit">
+                    <!-- &#8594; -->
+                    <svg width="20" height="14">
+                      <use href="../images/sprite.svg#icon-arrow"></use>
+                    </svg>
+                  </button>
                 </form>
               </div>
             </div>
@@ -568,7 +573,7 @@
     </div>
   </footer>
   <script src="../js/open1.js"></script>
-  <script src="../js/open2.js"></script>
+  <!-- <script src="../js/open2.js"></script> -->
 
 
 </body>
