footer on all pages

--- a/html/services.html
+++ b/html/services.html
@@ -161,37 +161,54 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="top-footer">
-      <div>
-        <a class="link fotter-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство полного цикла</a>
-        <button class="button upper" type="button">Оставить заявку</button>
-      </div>
-      <nav>
-        <ul class="list main-nav">
-          <li><a class="link" href="./html/about.html">О компании</a></li>
-          <li><a class="link" href="./features.html">Услуги</a></li>
-          <li><a class="link" href="./html/works.html">Наши работы</a></li>
-          <li><a class="link" href="./services.html">Сервис</a></li>
-          <li><a class="link" href="./complex.html">Комплексные решения</a></li>
-          <li><a class="link" href="./posts.html">Статьи и новости</a></li>
-          <li><a class="link" href="./contacts.html">Контакты</a></li>
-        </ul>
-      </nav>
-      <div>
-        <p>Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
-        <form>
-          <input class="placeholder" type="email" placeholder="Ваш e-mail">
-          <button type="submit">&#8594;</button>
-        </form>
+    <div class="footer-dark gray-section">
+      <div class="container">
+        <div class="top-footer">
+          <div class="flex-item">
+            <a class="link footer-title" href=""><span class="accent" lang="en">Promomix –</span> рекламное агентство
+              полного
+              цикла</a>
+            <button class="button upper" type="button">Оставить заявку</button>
+          </div>
+          <div class="flex-item">
+            <div class="flex-list">
+              <nav class="flex-item">
+                <ul class="list main-nav">
+                  <li class="item"><a class="link" href="../html/about.html">О компании</a></li>
+                  <li class="item"><a class="link" href="../html/features.html">Услуги</a></li>
+                  <li class="item"><a class="link" href="../html/works.html">Наши работы</a></li>
+                  <li class="item"><a class="link" href="../html/services.html">Сервис</a></li>
+                  <li class="item"><a class="link" href="../html/complex.html">Комплексные решения</a></li>
+                  <li class="item"><a class="link" href="../html/posts.html">Статьи и новости</a></li>
+                  <li class="item"><a class="link" href="../html/contacts.html">Контакты</a></li>
+                </ul>
+              </nav>
+              <div class="flex-item">
+                <p class="invitation">Чтобы быть в курсе всех акций и новых событий, подпишитесь на нашу рассылку.</p>
+                <form class="footer-form">
+                  <input class="placeholder" type="email" placeholder="Ваш e-mail">
+                  <button type="submit">
+                    <!-- &#8594; -->
+                    <svg width="20" height="14">
+                      <use href="../images/sprite.svg#icon-arrow"></use>
+                    </svg>
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="low-footer">
-      <p>&copy; 2011-2020 Promomix</p>
-      <ul class="list">
-        <li><a class="link" href=""></a>Facebook</li>
-        <li><a class="link" href=""></a>Vkontakte</li>
-        <li><a class="link" href=""></a>Instagram</li>
-      </ul>
+    <div class="container">
+      <div class="low-footer">
+        <p>&copy; 2011-2020 Promomix</p>
+        <ul class="list social-list">
+          <li class="social-item"><a class="link" href="">Facebook</a></li>
+          <li class="social-item"><a class="link" href="">Vkontakte</a></li>
+          <li class="social-item"><a class="link" href="">Instagram</a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
