--- a/html/calendars.html
+++ b/html/calendars.html
@@ -10,12 +10,23 @@
 </head>
 <body>
   <header class="header">
-    <a class="link" href="../index.html">promomix</a>
-    <ul class="list nav">
-      <li class="list-item"><button class="button" type="button">Поиск</button></li>
-      <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
-      <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
-    </ul>
+    <div class="container">
+      <div class="content-in-row">
+        <a class="link" href="../index.html"><img src="../images/icons/logo.svg" alt=""></a>
+        <ul class="list nav">
+          <li class="list-item ">
+            <button class="button content-in-row" type="button">
+              <svg class="icon">
+                <use href="./images/sprite.svg#icon-search"></use>
+              </svg>
+              Поиск
+            </button>
+          </li>
+          <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
+          <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
+        </ul>
+      </div>
+    </div>
   </header>
   <main>
     <section class="navigation">
