--- a/html/features.html
+++ b/html/features.html
@@ -10,121 +10,141 @@
 </head>
 <body>
   <header class="header">
-    <a class="link" href="../index.html">promomix</a>
-    <ul class="list nav">
-      <li class="list-item"><button class="button" type="button">Поиск</button></li>
-      <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
-      <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
-    </ul>
+    <div class="container">
+      <div class="content-in-row">
+        <a class="link" href="../index.html"><img src="../images/icons/logo.svg" alt=""></a>
+        <ul class="list nav">
+          <li class="list-item ">
+            <button class="button content-in-row" type="button">
+              <svg class="icon">
+                <use href="./images/sprite.svg#icon-search"></use>
+              </svg>
+              Поиск
+            </button>
+          </li>
+          <li class="list-item"><a class="link upper" href="tel:84964290900">8 496 429 09 00</a></li>
+          <li class="list-item"><button class="button upper bold" type="button">Оставить заявку</button></li>
+        </ul>
+      </div>
+    </div>
   </header>
   <main>
-    <section class="hero-features">
-      <h1 class="page-title">Услуги</h1>
-      <ul class="list">
-        <li class="features-item">
-          <a class="link" href="">Наружная реклама</a>
-          <div class="features-list">
-            <ul class="list">
-              <li><a class="link" href="">Баннеры и брандмауэры</a></li>
-              <li><a class="link" href="">Оформление фасада</a></li>
-              <li><a class="link" href="">Вывески</a></li>
-              <li><a class="link" href="">Таблички и указатели</a></li>
-              <li><a class="link" href="">Информационные стелы</a></li>
-              <li><a class="link" href="">Стенды уличные</a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Широкоформатная печать</a>
-          <div class="features-list">
-            <ul class="list">
-              <li><a class="link" href="">Печать банеров</a></li>
-              <li><a class="link" href="">Печать на пленке</a></li>
-              <li><a class="link" href="">Фотообои</a></li>
-              <li><a class="link" href="">Печать постеров</a></li>
-              <li><a class="link" href="">Печать на холсте</a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="features-item">
-          <a class="link" href="./polygraphy.html">Рекламная полиграфия</a>
-          <div class="features-list">
-            <ul class="list">
-              <li><a class="link" href="">Пластиковые карты</a></li>
-              <li><a class="link" href="">Наклейки и стикеры</a></li>
-              <li><a class="link" href="">Визитные карты</a></li>
-              <li><a class="link" href="">Буклеты и лифлеты</a></li>
-              <li><a class="link" href="">POS материалы</a></li>
-              <li><a class="link" href="./catalogs.html">Каталоги и журналы</a></li>
-              <li><a class="link" href="./flyers.html">Листовки и флаеры</a></li>
-              <li><a class="link" href="">Блокноты</a></li>
-              <li><a class="link" href="">Ежедневники</a></li>
-              <li><a class="link" href="">Бирки</a></li>
-              <li><a class="link" href="">Плакаты и постеры</a></li>
-              <li><a class="link" href="">Конверты</a></li>
-              <li><a class="link" href="">Пакеты</a></li>
-              <li><a class="link" href="">Бланки</a></li>
-              <li><a class="link" href="./calendars.html">Календари</a></li>
-              <li><a class="link" href="">Упаковка</a></li>
-              <li><a class="link" href="">Брошюры</a></li>
-              <li><a class="link" href="">Открытки</a></li>
-              <li><a class="link" href="">Папки</a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Сувенирная продукция</a>
-          <div class="features-list">
-            <ul class="list">
-              <li><a class="link" href="">Праздничные сувениры</a></li>
-              <li><a class="link" href="">Подарочные наборы</a></li>
-              <li><a class="link" href="">Флажки и флаги</a></li>
-              <li><a class="link" href="">Брелоки</a></li>
-              <li><a class="link" href="">Ручки</a></li>
-              <li><a class="link" href="">Кружки</a></li>
-              <li><a class="link" href="">Интерьерные сувениры</a></li>
-              <li><a class="link" href="">Значки и бейджи</a></li>
-              <li><a class="link" href="">Чехлы</a></li>
-              <li><a class="link" href="">Флешки</a></li>
-              <li><a class="link" href="">Награды</a></li>
-              <li><a class="link" href="">Магниты</a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Внутрення реклама</a>
-          <div class="features-list">
-            <ul class="list">
-              <li><a class="link" href="">Стройки ресепшн</a></li>
-              <li><a class="link" href="">Таблички и навигация</a></li>
-              <li><a class="link" href="">Оформление витрин</a></li>
-              <li><a class="link" href="">Стенды</a></li>
-              <li><a class="link" href="">Выставочное оборудование</a></li>
-              <li><a class="link" href="">Праздничное оформление</a></li>
-              <li><a class="link" href="">Световые панели</a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Гравировка и резка</a>
-          <div class="features-list">
-            <ul class="list">
-              <li><a class="link" href="">Лазерная гравировка</a></li>
-              <li><a class="link" href="">Плоттерная резка</a></li>
-              <li><a class="link" href="">Фрезерная резка и гравировка</a></li>
-            </ul>
-          </div>
-        </li>
-        <li class="features-item">
-          <a class="link" href="">Брендирование транспорта</a>
-          <div class="features-list">
-            <ul class="list">
-              <li><a class="link" href="">Лайтбоксы на крышу</a></li>
-              <li><a class="link" href="">Оклейка автомобилей</a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
+    <section class="features section">
+      <div class="container">
+        <h1 class="page-title features__page-title">Услуги</h1>
+        <ul class="list">
+          <li class="features__item flex-list">
+            <div class="flex-item">
+              <div class="direction-icon-box">
+                <svg class="icon" width="55" height="55">
+                  <use href="../images/sprite.svg#icon-codepen"></use>
+                </svg>
+              </div>
+              <a class="link " href="">Наружная <br> реклама</a>
+            </div>
+            <div class="flex-item">
+              <ul class="list flex-list">
+                <li class="flex-item"><a class="link" href="">Баннеры и брандмауэры</a></li>
+                <li class="flex-item"><a class="link" href="">Таблички и указатели</a></li>
+                <li class="flex-item"><a class="link" href="">Оформление фасада</a></li>
+                <li class="flex-item"><a class="link" href="">Информационные стелы</a></li>
+                <li class="flex-item"><a class="link" href="">Вывески</a></li>
+                <li class="flex-item"><a class="link" href="">Стенды уличные</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Широкоформатная печать</a>
+            <div class="features-list">
+              <ul class="list">
+                <li><a class="link" href="">Печать банеров</a></li>
+                <li><a class="link" href="">Печать на пленке</a></li>
+                <li><a class="link" href="">Фотообои</a></li>
+                <li><a class="link" href="">Печать постеров</a></li>
+                <li><a class="link" href="">Печать на холсте</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="features-item">
+            <a class="link" href="./polygraphy.html">Рекламная полиграфия</a>
+            <div class="features-list">
+              <ul class="list">
+                <li><a class="link" href="">Пластиковые карты</a></li>
+                <li><a class="link" href="">Наклейки и стикеры</a></li>
+                <li><a class="link" href="">Визитные карты</a></li>
+                <li><a class="link" href="">Буклеты и лифлеты</a></li>
+                <li><a class="link" href="">POS материалы</a></li>
+                <li><a class="link" href="./catalogs.html">Каталоги и журналы</a></li>
+                <li><a class="link" href="./flyers.html">Листовки и флаеры</a></li>
+                <li><a class="link" href="">Блокноты</a></li>
+                <li><a class="link" href="">Ежедневники</a></li>
+                <li><a class="link" href="">Бирки</a></li>
+                <li><a class="link" href="">Плакаты и постеры</a></li>
+                <li><a class="link" href="">Конверты</a></li>
+                <li><a class="link" href="">Пакеты</a></li>
+                <li><a class="link" href="">Бланки</a></li>
+                <li><a class="link" href="./calendars.html">Календари</a></li>
+                <li><a class="link" href="">Упаковка</a></li>
+                <li><a class="link" href="">Брошюры</a></li>
+                <li><a class="link" href="">Открытки</a></li>
+                <li><a class="link" href="">Папки</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Сувенирная продукция</a>
+            <div class="features-list">
+              <ul class="list">
+                <li><a class="link" href="">Праздничные сувениры</a></li>
+                <li><a class="link" href="">Подарочные наборы</a></li>
+                <li><a class="link" href="">Флажки и флаги</a></li>
+                <li><a class="link" href="">Брелоки</a></li>
+                <li><a class="link" href="">Ручки</a></li>
+                <li><a class="link" href="">Кружки</a></li>
+                <li><a class="link" href="">Интерьерные сувениры</a></li>
+                <li><a class="link" href="">Значки и бейджи</a></li>
+                <li><a class="link" href="">Чехлы</a></li>
+                <li><a class="link" href="">Флешки</a></li>
+                <li><a class="link" href="">Награды</a></li>
+                <li><a class="link" href="">Магниты</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Внутрення реклама</a>
+            <div class="features-list">
+              <ul class="list">
+                <li><a class="link" href="">Стройки ресепшн</a></li>
+                <li><a class="link" href="">Таблички и навигация</a></li>
+                <li><a class="link" href="">Оформление витрин</a></li>
+                <li><a class="link" href="">Стенды</a></li>
+                <li><a class="link" href="">Выставочное оборудование</a></li>
+                <li><a class="link" href="">Праздничное оформление</a></li>
+                <li><a class="link" href="">Световые панели</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Гравировка и резка</a>
+            <div class="features-list">
+              <ul class="list">
+                <li><a class="link" href="">Лазерная гравировка</a></li>
+                <li><a class="link" href="">Плоттерная резка</a></li>
+                <li><a class="link" href="">Фрезерная резка и гравировка</a></li>
+              </ul>
+            </div>
+          </li>
+          <li class="features-item">
+            <a class="link" href="">Брендирование транспорта</a>
+            <div class="features-list">
+              <ul class="list">
+                <li><a class="link" href="">Лайтбоксы на крышу</a></li>
+                <li><a class="link" href="">Оклейка автомобилей</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer class="footer">
