--- a/html/features.html
+++ b/html/features.html
@@ -35,12 +35,12 @@
         <ul class="list">
           <li class="features__item flex-list">
             <div class="flex-item">
-              <div class="direction-icon-box">
+              <div class="features__box">
                 <svg class="icon" width="55" height="55">
                   <use href="../images/sprite.svg#icon-codepen"></use>
                 </svg>
+                <a class="link features__label" href="">Наружная <br> реклама</a>
               </div>
-              <a class="link " href="">Наружная <br> реклама</a>
             </div>
             <div class="flex-item">
               <ul class="list flex-list">
